# deal

big-innovate/arithmetic/: alg.docx  alg.md
big-innovate/database/ml-1m/: README.md  movies.xlsx  user_data.xlsx
big-innovate/essay/: articles.md
big-innovate/process/9.12推进/: 算法.md
big-innovate/process/second_1019/: deal.md
big-innovate/process/second_1019/DATA/: compressed_data.txt  occupation.txt
big-innovate/process/second_1019/data_deal/: CMakeLists.txt  main.cpp
big-innovate/process/second_1019/data_deal/src/header/: CONSTVALUE.h  MyError.h  UserInfo.h  compressor.h  deal.h
big-innovate/process/second_1019/data_deal/src/source/: MyError.cpp  UserInfo.cpp  deal.cpp
big-innovate/process/second_1019/test/: UserInfo.h  test.sln  test.vcxproj  test.vcxproj.filters
